--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi
-scikit-learn
-pandas
-joblib
-uvicorn
+fastapi==0.116.1
+scikit-learn==1.6.1
+pandas==2.2.3
+joblib==1.5.0
+uvicorn==0.35.0
